# LLMConfig

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  ContextUpdate.md  README.md  opencodeUpdate.md  pyproject.toml
deploy/: README-deploy.md  install-companion.ps1  install-ollama-update.ps1  install-service.ps1  serve.sh  update-ollama.ps1  vllm-companion@.service  vllm@.service
llmconfig/: __init__.py  cli.py  config.py  doctor.py  gpu.py  idle.py  jobs.py  lane.py  lane_state.py  main.py  monitor.py  nvapi.py  openai_gateway.py  orchestrator.py  proc.py  registry.py  schemas.py  winsvc.py  wsl.py
llmconfig/backends/: __init__.py  ollama.py  vllm.py
llmconfig/data/: vllm_models.default.yaml  vllm_models_companion.default.yaml
llmconfig/web/static/: app.js  monitor.js  style.css
llmconfig/web/templates/: index.html
tests/: test_gpu.py  test_idle_unload.py  test_lane_companion.py  test_monitor.py  test_openai_gateway.py  test_orchestrator.py  test_registry.py  test_wsl.py
