[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmconfig"
version = "0.1.0"
description = "GPU-arbitrated control plane for Ollama + vLLM sharing a single GPU"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rivaborn" }]
keywords = ["ollama", "vllm", "llm", "gpu", "vram", "orchestration"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
llmconfig = "llmconfig.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llmconfig"]
# Ship the web UI + default registry (non-.py files inside the package).
artifacts = ["llmconfig/web/**", "llmconfig/data/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
